fix navbar on small screen

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -27,11 +27,10 @@ body{
 
 .nav-link:hover{
     color: rgba(255,255,255,0.5);
-    border-bottom-color:rgba(255,255,255,0.5);
 }
 
 .nav-link.active {
     color: white;
-    border-bottom-color:white;
+    transform: scale(1.1);
 
 }
